# mcp-smartspreads

./: .env.example  .gitignore  .mcp.json  BACKLOG.md  CLAUDE_CHEAT_SHEET.md  CLAUDE_PROJECT_INSTRUCTIONS.md  CLIENT_CONFIG.md  DESIGN.md  PHASED_ARCHITECTURE.md  PROMPTS.md  README.md  ROADMAP.md  USAGE.md  pyproject.toml
docs/: BACKLOG.md  CLAUDE_PROJECT_INSTRUCTIONS.md  CLI.md  DEPLOY_LOCAL.md  DESIGN.md  NEXT_SESSION_HANDOFF.md  PROMPTS.md  ROADMAP.md  SETUP.md  TEST_PROMPTS.md  USAGE.md  business-layer-design.md  claude-project-instructions-reference.md  daily-workflow-design.md  e2e-prompt.md  newsletter-intelligence-plan.md  phase1-database-schema.md  phase3-principle-integration-design.md  publication-contract.md  strategy-knowledge-design.md  symbol-catalog-design.md
docs/archive/: CLIENT_CONFIG.md  NEXT_SESSION_HANDOFF-v0.1.md
scripts/: generate_daily_dry_run.py  phase1_stack.py  run_weekly_pipeline.ps1  smartspreads_cli.py  smoke_phase1_stack.ps1  start_local.ps1  stop_phase1_stack.ps1  verify_local.ps1  verify_phase1_stack.ps1
src/newsletter_mcp/: __init__.py  business.py  config.py  database.py  models.py  parser.py  principle_evaluation.py  server.py
supabase/: schema.sql
tests/: test_business_layer.py  test_exit_schedule.py  test_phase1_data_layer.py  test_phase1_e2e.py  test_principle_evaluation.py  test_publication_contract.py  test_strategy_knowledge.py  test_symbol_catalog.py
